fix(storybook): keep yellow tag text readable

--- a/src/components/tag/tag.styles.scss
+++ b/src/components/tag/tag.styles.scss
@@ -12,6 +12,7 @@
 
 	&--yellow {
 		background-color: $yellow-3;
+		color: var(--m3-on-surface, $secondary);
 	}
 
 	&--green {
